objects/ErrorHandlerItem__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Error Handler Item : allows you to configure the handling of errors and the exceptions that should be propagated</description>
    <fields>
        <fullName>ErrorMessageEnglish__c</fullName>
        <description>Error Message English</description>
        <inlineHelpText>Error Message English</inlineHelpText>
        <label>Error Message English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <description>Error Message</description>
        <inlineHelpText>Error Message</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResultType__c</fullName>
        <description>Result Type</description>
        <inlineHelpText>Result Type</inlineHelpText>
        <label>Result Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Error Handler Item</label>
</CustomObject>